--- a/charts/stable/uptime-kuma/templates/common.yaml
+++ b/charts/stable/uptime-kuma/templates/common.yaml
@@ -1,11 +1,11 @@
-{{ include "tc.common.loader.all" . }}
+{{- include "tc.common.loader.init" . }}
 
 {{- $_ := set .Values.podAnnotations "prometheus.io/scrape" "true" -}}
 {{- $_ := set .Values.podAnnotations "prometheus.io/path" "/metrics" -}}
-{{- $_ := set .Values.podAnnotations "prometheus.io/port" (.Values.service.http.ports.http.port | toString) -}}
+{{- $_ := set .Values.podAnnotations "prometheus.io/port" (.Values.service.metrics.ports.metrics.port | toString) -}}
 
-{{- include "blocky.servicemonitor" . -}}
-{{- include "blocky.prometheusrule" . -}}
+{{- include "uptime.servicemonitor" . -}}
+{{- include "uptime.prometheusrule" . -}}
 
 {{/* Render the templates */}}
 {{ include "tc.common.loader.apply" . }}
