--- a/charts/stable/uptime-kuma/templates/common.yaml
+++ b/charts/stable/uptime-kuma/templates/common.yaml
@@ -1,8 +1,12 @@
 {{- include "tc.common.loader.init" . }}
 
+{{- if hasKey .Values "metrics" -}}
+{{- if .Values.metrics.enabled -}}
 {{- $_ := set .Values.podAnnotations "prometheus.io/scrape" "true" -}}
 {{- $_ := set .Values.podAnnotations "prometheus.io/path" "/metrics" -}}
 {{- $_ := set .Values.podAnnotations "prometheus.io/port" (.Values.service.metrics.ports.metrics.targetPort | default 3002 | quote) -}}
+{{- end -}}
+{{- end -}}
 
 {{- include "uptime.servicemonitor" . -}}
 {{- include "uptime.prometheusrule" . -}}
