--- a/charts/enterprise/cert-manager/questions.yaml
+++ b/charts/enterprise/cert-manager/questions.yaml
@@ -8,27 +8,8 @@ questions:
       additional_attrs: true
       type: dict
       attrs:
-        - variable: selfSigned
-          label: 'SelfSigned Issuer'
-          schema:
-            additional_attrs: true
-            type: dict
-            attrs:
-              - variable: enabled
-                label: enabled
-                description: "Enable self-signed issuer"
-                schema:
-                  type: boolean
-                  default: true
-              - variable: name
-                label: Name
-                description: "Name to give the issuer"
-                schema:
-                  type: string
-                  required: true
-                  default: "selfSigned"
         - variable: ACME
-          label: ACME Issuer
+          label: 'ACME Issuer'
           schema:
             type: list
             default: []
@@ -46,6 +27,25 @@ questions:
                         type: string
                         required: true
                         default: ""
+                    - variable: type
+                      label: Type or DNS-Provider
+                      description: DNS Provider
+                      schema:
+                        type: string
+                        default: cloudflare
+                        enum:
+                          - value: cloudflare
+                            description: Cloudflare
+                          - value: route53
+                            description: Route53
+                          - value: akamai
+                            description: Akamai
+                          - value: digitalocean
+                            description: Digitalocean
+                          - value: rfc2136
+                            description: rfc2136 (Advanced)
+                          - value: HTTP01
+                            description: HTTP01 (Experimental)
                     - variable: server
                       label: Server
                       description: "Server for ACME, for example: letsencrypt"
@@ -79,26 +79,6 @@ questions:
                         required: true
                         show_if: [["type", "!=", "HTTP01"]]
                         default: "something@example.com"
-                    - variable: type
-                      label: Type or DNS-Provider
-                      description: DNS Provider
-                      schema:
-                        type: string
-                        required: true
-                        default: cloudflare
-                        enum:
-                          - value: cloudflare
-                            description: Cloudflare
-                          - value: route53
-                            description: Route53
-                          - value: akamai
-                            description: Akamai
-                          - value: digitalocean
-                            description: Digitalocean
-                          - value: rfc2136
-                            description: rfc2136 (Advanced)
-                          - value: HTTP01
-                            description: HTTP01 (Experimental)
                     - variable: cfapikey
                       label: CloudFlare API key
                       description: "CloudFlare API Key"
@@ -216,6 +196,26 @@ questions:
                         type: string
                         required: true
                         default: ""
+
+        - variable: selfSigned
+          label: 'SelfSigned Issuer'
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: enabled
+                label: enabled
+                description: "Enable self-signed issuer"
+                schema:
+                  type: boolean
+                  default: true
+              - variable: name
+                label: Name
+                description: "Name to give the issuer"
+                schema:
+                  type: string
+                  required: true
+                  default: "selfSigned"
 
         - variable: CA
           label: Certiticate Authority Issuer
