--- a/charts/stable/uptime-kuma/templates/common.yaml
+++ b/charts/stable/uptime-kuma/templates/common.yaml
@@ -4,7 +4,7 @@
 {{- if .Values.metrics.enabled -}}
 {{- $_ := set .Values.podAnnotations "prometheus.io/scrape" "true" -}}
 {{- $_ := set .Values.podAnnotations "prometheus.io/path" "/metrics" -}}
-{{- $_ := set .Values.podAnnotations "prometheus.io/port" (.Values.service.metrics.ports.metrics.targetPort | default 3002 | quote) -}}
+{{- $_ := set .Values.podAnnotations "prometheus.io/port" (.Values.service.metrics.ports.metrics.targetPort | quote) -}}
 {{- end -}}
 {{- end -}}
 
