fix (Uptime Kuma): Missing metrics port (#6435)
* (fix) Uptime Kuma: Missing metrics port

* bump

* common annotations

* add some tidbits

* Update charts/stable/uptime-kuma/templates/_prometheusrules.tpl

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* Update charts/stable/uptime-kuma/templates/_prometheusrules.tpl

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* common

* common 2

* Update charts/stable/uptime-kuma/templates/common.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/charts/stable/uptime-kuma/templates/common.yaml
+++ b/charts/stable/uptime-kuma/templates/common.yaml
@@ -1,1 +1,15 @@
-{{ include "tc.common.loader.all" . }}
+{{- include "tc.common.loader.init" . }}
+
+{{- if hasKey .Values "metrics" -}}
+{{- if .Values.metrics.enabled -}}
+{{- $_ := set .Values.podAnnotations "prometheus.io/scrape" "true" -}}
+{{- $_ := set .Values.podAnnotations "prometheus.io/path" "/metrics" -}}
+{{- $_ := set .Values.podAnnotations "prometheus.io/port" (.Values.service.metrics.ports.metrics.targetPort | quote) -}}
+{{- end -}}
+{{- end -}}
+
+{{- include "uptime.servicemonitor" . -}}
+{{- include "uptime.prometheusrule" . -}}
+
+{{/* Render the templates */}}
+{{ include "tc.common.loader.apply" . }}
