--- a/charts/stable/uptime-kuma/values.yaml
+++ b/charts/stable/uptime-kuma/values.yaml
@@ -47,3 +47,19 @@ metrics:
     interval: 1m
     scrapeTimeout: 30s
     labels: {}
+  prometheusRule:
+    enabled: false
+    labels: {}
+    # -- Configure additionial rules for the chart under this key.
+    # @default -- See prometheusrules.yaml
+    rules:
+      []
+      # - alert: UnifiPollerAbsent
+      #   annotations:
+      #     description: Unifi Poller has disappeared from Prometheus service discovery.
+      #     summary: Unifi Poller is down.
+      #   expr: |
+      #     absent(up{job=~".*unifi-poller.*"} == 1)
+      #   for: 5m
+      #   labels:
+      #     severity: critical
