--- a/charts/enterprise/metallb/values.yaml
+++ b/charts/enterprise/metallb/values.yaml
@@ -1,6 +1,6 @@
 image:
-  repository: placeholder
-  tag: upstream
+  repository: tccr.io/truecharts/scratch
+  tag: latest
   pullPolicy: IfNotPresent
 
 controller:
