--- a/charts/stable/lidarr/questions.yaml
+++ b/charts/stable/lidarr/questions.yaml
@@ -25,7 +25,7 @@ questions:
               - value: ""
                 description: In-App Setting
               - value: External
-                description: External
+                description: External/None
               - value: Basic
                 description: Basic
               - value: Forms
