--- a/charts/stable/promcord/templates/prometheusrules.yaml
+++ b/charts/stable/promcord/templates/prometheusrules.yaml
@@ -1,3 +1,5 @@
+{{- define "certmanager.metrics" -}}
+{{- if .Values.metrics.enabled }}
 {{- if and .Values.metrics.enabled .Values.metrics.prometheusRule.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
@@ -25,3 +27,4 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
 {{- end }}
+{{- end -}}
