--- a/charts/stable/promcord/templates/prometheusrules.yaml
+++ b/charts/stable/promcord/templates/prometheusrules.yaml
@@ -1,4 +1,4 @@
-{{- define "certmanager.prometheusrule" -}}
+{{- define "certmanager.metrics.prometheusrule" -}}
 {{- if and .Values.metrics.enabled .Values.metrics.prometheusRule.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
