--- a/charts/stable/promcord/templates/servicemonitor.yaml
+++ b/charts/stable/promcord/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- define "promcord.metrics" -}}
 {{- if .Values.metrics.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -22,3 +23,4 @@ spec:
       {{- end }}
       path: /metrics
 {{- end }}
+{{- end -}}
