--- a/charts/stable/promcord/templates/common.yaml
+++ b/charts/stable/promcord/templates/common.yaml
@@ -1,2 +1,6 @@
 {{/* Render the templates */}}
 {{ include "tc.common.loader.all" . }}
+
+
+{{ include "promcord.metrics" . }}
+{{ include "promcord.metrics.prometheusrules" . }}
