--- a/templates/questions/general/advanced.yaml
+++ b/templates/questions/general/advanced.yaml
@@ -1,55 +1,55 @@
-  - variable: horizontalPodAutoscaler
-    group: Advanced
-    label: (Advanced) Horizontal Pod Autoscaler
-    schema:
-      type: list
-      default: []
-      items:
-      - variable: hpaEntry
-        label: HPA Entry
-        schema:
-          additional_attrs: true
-          type: dict
-          attrs:
-            - variable: name
-              label: Name
-              schema:
-                type: string
-                required: true
-                default: ""
-            - variable: enabled
-              label: Enabled
-              schema:
-                type: boolean
-                default: false
-                show_subquestions_if: true
-                subquestions:
-                  - variable: target
-                    label: Target
-                    description: Deployment name, Defaults to Main Deployment
-                    schema:
-                      type: string
-                      default: ""
-                  - variable: minReplicas
-                    label: Minimum Replicas
-                    schema:
-                      type: int
-                      default: 1
-                  - variable: maxReplicas
-                    label: Maximum Replicas
-                    schema:
-                      type: int
-                      default: 5
-                  - variable: targetCPUUtilizationPercentage
-                    label: Target CPU Utilization Percentage
-                    schema:
-                      type: int
-                      default: 80
-                  - variable: targetMemoryUtilizationPercentage
-                    label: Target Memory Utilization Percentage
-                    schema:
-                      type: int
-                      default: 80
+#  - variable: horizontalPodAutoscaler
+#    group: Advanced
+#    label: (Advanced) Horizontal Pod Autoscaler
+#    schema:
+#      type: list
+#      default: []
+#      items:
+#      - variable: hpaEntry
+#        label: HPA Entry
+#        schema:
+#          additional_attrs: true
+#          type: dict
+#          attrs:
+#            - variable: name
+#              label: Name
+#              schema:
+#                type: string
+#                required: true
+#                default: ""
+#            - variable: enabled
+#              label: Enabled
+#              schema:
+#                type: boolean
+#                default: false
+#                show_subquestions_if: true
+#                subquestions:
+#                  - variable: target
+#                    label: Target
+#                    description: Deployment name, Defaults to Main Deployment
+#                    schema:
+#                      type: string
+#                      default: ""
+#                  - variable: minReplicas
+#                    label: Minimum Replicas
+#                    schema:
+#                      type: int
+#                      default: 1
+#                  - variable: maxReplicas
+#                    label: Maximum Replicas
+#                    schema:
+#                      type: int
+#                      default: 5
+#                  - variable: targetCPUUtilizationPercentage
+#                    label: Target CPU Utilization Percentage
+#                    schema:
+#                      type: int
+#                      default: 80
+#                  - variable: targetMemoryUtilizationPercentage
+#                    label: Target Memory Utilization Percentage
+#                    schema:
+#                      type: int
+#                      default: 80
   - variable: networkPolicy
     group: Advanced
     label: (Advanced) Network Policy
