--- a/charts/stable/promcord/templates/servicemonitor.yaml
+++ b/charts/stable/promcord/templates/servicemonitor.yaml
@@ -14,7 +14,7 @@ spec:
     matchLabels:
       {{- include "tc.common.labels.selectorLabels" . | nindent 6 }}
   endpoints:
-    - port: metrics
+    - port: main
       {{- with .Values.metrics.serviceMonitor.interval }}
       interval: {{ . }}
       {{- end }}
