--- a/charts/stable/promcord/values.yaml
+++ b/charts/stable/promcord/values.yaml
@@ -7,11 +7,9 @@ service:
   main:
     ports:
       main:
-        enabled: false
-      metrics:
+        type: ClusterIP
         enabled: true
-        port: 10101
-        targetPort: 8080
+        port: 8080
 
 # env:
 #   DISCORD_TOKEN:
