--- a/charts/stable/promcord/values.yaml
+++ b/charts/stable/promcord/values.yaml
@@ -11,6 +11,17 @@ service:
         enabled: true
         port: 8080
 
+# -- Configure the Security Context for the Pod
+#podSecurityContext:
+#  runAsUser: 568
+#  runAsGroup: 568
+#  fsGroup: 568
+
+# -- Configure the Security Context for the main container
+securityContext:
+  readOnlyRootFilesystem: false
+#  runAsNonRoot: true
+
 # env:
 #   DISCORD_TOKEN:
 
