--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -105,7 +105,7 @@ jobs:
           - basic-values.yaml
           - configmap-values.yaml
           - daemonset-values.yaml
-          - extracontainers-values.yaml
+          - extra-containers-values.yaml
           - job-cron-values.yaml
           - persistence-values.yaml
           - rbac-values.yaml
