link port with the listenting port

--- a/charts/stable/uptime-kuma/values.yaml
+++ b/charts/stable/uptime-kuma/values.yaml
@@ -13,12 +13,14 @@ podSecurityContext:
 security:
   PUID: 0
 
+env:
+  UPTIME_KUMA_PORT: "{{ .Values.service.main.ports.main.port }}"
+
 service:
   main:
     ports:
       main:
         port: 3001
-        targetPort: 3001
 
 persistence:
   config:
