feat(statping-ng): remove duplicate app and switch current to a maintained project

--- a/charts/stable/statping-ng/Chart.yaml
+++ b/charts/stable/statping-ng/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 appVersion: "0.90.78"
 description: Status page for monitoring your websites and applications
-name: statping
-version: 10.0.17
+name: statping-ng
+version: 11.0.0
 kubeVersion: ">=1.16.0-0"
 keywords:
   - statping
