--- a/charts/stable/statping-ng/questions.yaml
+++ b/charts/stable/statping-ng/questions.yaml
@@ -162,6 +162,7 @@ questions:
             default: 568
 # Include{podSecurityContextAdvanced}
 # Include{resources}
+# Include{metrics}
 # Include{advanced}
 # Include{addons}
 # Include{codeserver}
