--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -253,6 +253,7 @@ words:
   - statefulset
   - staticdhcpleases
   - staticfiles
+  - Statping
   - steamcommunica
   - steammasterser
   - subchart
