--- a/charts/stable/statping-ng/values.yaml
+++ b/charts/stable/statping-ng/values.yaml
@@ -14,6 +14,8 @@ statping:
   sample_data: false
   allow_reports: false
   use_cdn: true
+  disable_logs: false
+  disable_colors: false
   remove_after: 2160h
   cleanup_interval: 1h
 
