fix(Uptime Kuma): Wrong metrics port (#6456)
* (fix) Uptime Kuma: Missing metrics port

* bump

* common annotations

* add some tidbits

* Update charts/stable/uptime-kuma/templates/_prometheusrules.tpl

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* Update charts/stable/uptime-kuma/templates/_prometheusrules.tpl

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* common

* common 2

* Update charts/stable/uptime-kuma/templates/common.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* fix (Uptime Kuma): Prometheus rules

* bump

* fix(uptime kuma): metrics port wrong

* bump

* remove pod annotations

* link port with the listenting port

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/charts/stable/uptime-kuma/values.yaml
+++ b/charts/stable/uptime-kuma/values.yaml
@@ -13,23 +13,14 @@ podSecurityContext:
 security:
   PUID: 0
 
+env:
+  UPTIME_KUMA_PORT: "{{ .Values.service.main.ports.main.port }}"
+
 service:
   main:
     ports:
       main:
         port: 3001
-        targetPort: 3001
-
-  # Metrics Services
-  metrics:
-    enabled: true
-    type: ClusterIP
-    ports:
-      metrics:
-        enabled: true
-        protocol: HTTP
-        port: 3002
-        targetPort: 3002
 
 persistence:
   config:
