--- a/charts/stable/deemix/questions.yaml
+++ b/charts/stable/deemix/questions.yaml
@@ -58,6 +58,14 @@ questions:
             type: dict
             attrs:
 # Include{persistenceBasic}
+        - variable: data
+          label: "App Downloads Storage"
+          description: "Stores the Application Downloads."
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+# Include{persistenceBasic}
 # Include{persistenceList}
 # Include{ingressRoot}
         - variable: main
