fix(navidrome) add music persistence and docs

--- a/charts/stable/navidrome/values.yaml
+++ b/charts/stable/navidrome/values.yaml
@@ -21,6 +21,9 @@ persistence:
   data:
     enabled: true
     mountPath: "/data"
+  music:
+    enabled: true
+    mountPath: "/music"
 
 portal:
   enabled: true
