--- a/charts/stable/cops/Chart.yaml
+++ b/charts/stable/cops/Chart.yaml
@@ -1,9 +1,3 @@
-annotations:
-  truecharts.org/SCALE-support: "true"
-  truecharts.org/catagories: |
-    - Cloud
-    - MediaApp-Books
-    - MediaServer-Books
 apiVersion: v2
 appVersion: "latest"
 dependencies:
@@ -12,7 +6,7 @@ dependencies:
     version: 11.1.2
 deprecated: false
 description: "Cops(http://blog.slucas.fr/en/oss/calibre-opds-php-server) by Sébastien Lucas, stands for Calibre OPDS (and HTML) Php Server.\n"
-home: https://truecharts.org/charts/incubator/cops
+home: https://truecharts.org/charts/stable/cops
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/cops.png
 keywords:
   - cops
@@ -26,9 +20,15 @@ maintainers:
     url: https://truecharts.org
 name: cops
 sources:
-  - https://github.com/truecharts/charts/tree/master/charts/incubator/cops
+  - https://github.com/truecharts/charts/tree/master/charts/stable/cops
   - http://blog.slucas.fr/en/oss/calibre-opds-php-server
   - https://github.com/orgs/linuxserver/packages/container/package/cops
   - https://github.com/linuxserver/docker-cops#readme
 type: application
-version: 2.0.12
+version: 2.1.0
+annotations:
+  truecharts.org/SCALE-support: "true"
+  truecharts.org/catagories: |
+    - Cloud
+    - MediaApp-Books
+    - MediaServer-Books
