--- a/charts/stable/cops/values.yaml
+++ b/charts/stable/cops/values.yaml
@@ -1,5 +1,3 @@
-env:
-  UMASK: ""
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/cops
@@ -21,8 +19,8 @@ service:
   main:
     ports:
       main:
-        port: 80
-        protocol: TCP
+        port: 12480
+        protocol: HTTP
         targetPort: 80
 
 portal:
