--- a/charts/stable/rtmpserver/Chart.yaml
+++ b/charts/stable/rtmpserver/Chart.yaml
@@ -1,8 +1,3 @@
-annotations:
-  truecharts.org/SCALE-support: "true"
-  truecharts.org/catagories: |
-    - GameServers
-    - Network-Other
 apiVersion: v2
 appVersion: "latest"
 dependencies:
@@ -10,8 +5,8 @@ dependencies:
     repository: https://library-charts.truecharts.org
     version: 11.1.2
 deprecated: false
-description: "This Chart can be used to create a video streaming server that supports RTMP, HLS, DASH out of the box. It also allows adaptive streaming and custom transcoding of video streams. All modules are built from source on Debian and Alpine Linux base images."
-home: https://truecharts.org/charts/incubator/rtmpserver
+description: A video streaming server that supports RTMP, HLS, DASH out of the box.
+home: https://truecharts.org/charts/stable/rtmpserver
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/rtmpserver.png
 keywords:
   - rtmpserver
@@ -26,7 +21,12 @@ name: rtmpserver
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/rtmpserver
   - https://hub.docker.com/alqutami/rtmp-hls
-  - alqutami/rtmp-hls
   - https://github.com/TareqAlqutami/rtmp-hls-server
 type: application
-version: 2.0.7
+version: 3.0.0
+annotations:
+  truecharts.org/catagories: |
+    - GameServers
+    - Network-Other
+  truecharts.org/SCALE-support: "true"
+  truecharts.org/grade: U
