--- a/charts/stable/lama-cleaner/Chart.yaml
+++ b/charts/stable/lama-cleaner/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v2
-appVersion: "cpu"
+appVersion: "0.26.1"
 dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.1.2
 deprecated: false
 description: Open-source inpainting tool powered by SOTA AI model.
-home: https://truecharts.org/charts/incubator/lama-cleaner
+home: https://truecharts.org/charts/stable/lama-cleaner
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/lama-cleaner.png
 keywords:
   - lama-cleaner
@@ -19,10 +19,10 @@ maintainers:
     url: https://truecharts.org
 name: lama-cleaner
 sources:
-  - https://github.com/truecharts/charts/tree/master/charts/incubator/lama-cleaner
+  - https://github.com/truecharts/charts/tree/master/charts/stable/lama-cleaner
   - https://github.com/Sanster/lama-cleaner
 type: application
-version: 0.0.5
+version: 1.0.0
 annotations:
   truecharts.org/catagories: |
     - media
