feat(soft-serve) move to stable

--- a/charts/stable/soft-serve/questions.yaml
+++ b/charts/stable/soft-serve/questions.yaml
@@ -21,7 +21,7 @@ questions:
             default: ""
             private: true
         - variable: key_path
-          label: Soft Serve Host
+          label: Soft Serve Host Key-Pair Path
           description: SSH host key-pair PATH
           schema:
             type: string
