--- a/charts/stable/radarr/values.yaml
+++ b/charts/stable/radarr/values.yaml
@@ -6,6 +6,16 @@ image:
 securityContext:
   readOnlyRootFilesystem: false
 
+env:
+  RADARR__POSTGRES_HOST:
+    secretKeyRef:
+      name: dbcreds
+      key: plainhost
+  RADARR__POSTGRES_PASSWORD:
+    secretKeyRef:
+      name: dbcreds
+      key: postgresql-password
+
 radarr:
   auth_method: ""
 
@@ -43,7 +53,7 @@ probes:
 persistence:
   config:
     enabled: true
-    mountPath: "/config"
+    mountPath: /config
 
 postgresql:
   enabled: true
