--- a/charts/stable/lidarr/values.yaml
+++ b/charts/stable/lidarr/values.yaml
@@ -3,6 +3,16 @@ image:
   pullPolicy: IfNotPresent
   tag: 1.1.1.2762@sha256:95c9520e6f5dbba909f1a6a6214fcf10de007fea4eb88fad30c3306238e21252
 
+env:
+  LIDARR__POSTGRES_HOST:
+    secretKeyRef:
+      name: dbcreds
+      key: plainhost
+  LIDARR__POSTGRES_PASSWORD:
+    secretKeyRef:
+      name: dbcreds
+      key: postgresql-password
+
 lidarr:
   auth_method: ""
 
@@ -43,7 +53,7 @@ probes:
 persistence:
   config:
     enabled: true
-    mountPath: "/config"
+    mountPath: /config
 
 postgresql:
   enabled: true
