--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -11,22 +11,21 @@ podSecurityContext:
   runAsUser: 0
   runAsGroup: 0
 
-global:
-  isSCALE: true
-
-# -- In most cases the "enabled" key is only used internally to "render" or not the configuration
+# -- The "render_config" key is only used internally to "render" or not the configuration
 # - Some parts of the config bellow are slightly modified so they can be added on SCALE UI. Mainly lists.
-# - Do not blindly copy paste configuration from upstream.
+# - Do not blindly copy paste configuration from upstream. As this won't work on all cases
+# - Where you see "null" set as default is ignored by the configmap. (Not all keys are supported).
+# - Those "nulls" should be replaced with integers (if you want to set a value)
 frigate:
   mqtt:
     host: mqtt.server.com
     port: 1883
     # -- NOTE: Must be unique if you are running multiple instances
-    topic_prefix: frigate
+    topic_prefix: ""
     # -- NOTE: Must be unique if you are running multiple instances
-    client_id: frigate
-    user: mqtt_user
-    password: password
+    client_id: ""
+    user: ""
+    password: ""
     stats_interval: 60
 
   detectors:
@@ -46,14 +45,14 @@ frigate:
   model:
     # -- Enable it to add the configuration in the config file
     render_config: false
-    # -- Optional: Path to the model
-    path: /edgetpu_model.tflite
-    # -- Optional: Path to the labelmap
-    labelmap_path: /labelmap.txt
     # -- Required: Object detection model input width
     width: 320
     # -- Required: Object detection model input height
     height: 320
+    # -- Optional: Path to the model
+    path: ""
+    # -- Optional: Path to the labelmap
+    labelmap_path: ""
     # -- Optional: Label name modifications.
     labelmap:
       []
@@ -69,8 +68,9 @@ frigate:
     default: info
     # -- Optional: Component specific logger overrides
     logs:
-      - component: frigate.event
-        verbosity: debug
+      []
+      # - component: frigate.event
+      #   verbosity: debug
 
   birdseye:
     # -- Enable it to add the configuration in the config file
@@ -78,36 +78,36 @@ frigate:
     # -- Enables birdseye
     enabled: true
     # -- Optional: Width of the output resolution
-    width: 1280
+    width: null
     # -- Optional: Height of the output resolution
-    height: 720
+    height: null
     # -- Optional: Encoding quality of the mpeg1 feed
     # - 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
-    quality: 8
+    quality: null
     # -- Optional: Mode of the view. Available options are: objects, motion, and continuous
     # - objects - cameras are included if they have had a tracked object within the last 30 seconds
     # - motion - cameras are included if motion was detected in the last 30 seconds
     # - continuous - all cameras are included always
-    mode: objects
+    mode: ""
 
   ffmpeg:
     # -- Enable it to add the configuration in the config file
-    render_config: false
+    render_config: true
     # -- Optional: global ffmpeg args
-    global_args: -hide_banner -loglevel warning
+    global_args: ""
     # -- Optional: global input args
-    input_args: -avoid_negative_ts make_zero -fflags +genpts+discardcorrupt -rtsp_transport tcp -timeout 5000000 -use_wallclock_as_timestamps 1
+    input_args: ""
     # -- Optional: global hwaccel args
     # - NOTE: See hardware acceleration docs for your specific device
     hwaccel_args: ""
     # -- Optional: global output args
     output_args:
       # -- Optional: output args for detect streams
-      detect: -f rawvideo -pix_fmt yuv420p
+      detect: ""
       # -- Optional: output args for record streams
-      record: -f segment -segment_time 10 -segment_format mp4 -reset_timestamps 1 -strftime 1 -c copy -an
+      record: ""
       # -- Optional: output args for rtmp streams
-      rtmp: -c copy -f flv
+      rtmp: ""
 
   detect:
     # -- Enable it to add the configuration in the config file
@@ -116,22 +116,22 @@ frigate:
     # - This value can be set via MQTT and will be updated in startup based on retained value
     enabled: true
     # -- Optional: width of the frame for the input with the detect role
-    width: 1280
+    width: null
     # -- Optional: height of the frame for the input with the detect role
-    height: 720
+    height: null
     # -- Optional: desired fps for your camera for the input with the detect role
     # - NOTE: Recommended value of 5. Ideally, try and reduce your FPS on the camera.
-    fps: 5
+    fps: null
     # -- Optional: Number of frames without a detection before frigate considers an object to be gone. (default: 5x the frame rate)
-    max_disappeared: 25
+    max_disappeared: null
     # -- Optional: Configuration for stationary object tracking
     stationary:
       # -- Optional: Frequency for confirming stationary objects
       # - When set to 0, object detection will not confirm stationary objects until movement is detected.
       # - If set to 10, object detection will run to confirm the object still exists on every 10th frame.
-      interval: 0
+      interval: null
       # -- Optional: Number of frames without a position change for an object to be considered stationary (default: 10x the frame rate or 10s)
-      threshold: 50
+      threshold: null
       # -- Optional: Define a maximum number of frames for tracking a stationary object (default: not set, track forever)
       # - This can help with false positives for objects that should only be stationary for a limited amount of time.
       # - It can also be used to disable stationary object tracking. For example, you may want to set a value for person, but leave
@@ -152,11 +152,13 @@ frigate:
     render_config: false
     # -- Optional: list of objects to track from labelmap.txt
     track:
-      - person
+      []
+      # - person
+      # - car
     # -- Optional: mask to prevent all object types from being detected in certain areas (default: no mask)
     # - Checks based on the bottom center of the bounding box of the object.
     # - NOTE: This mask is COMBINED with the object type specific mask below
-    mask: 0,0,1000,0,1000,200,0,200
+    mask: ""
     # - Optional: filters to reduce false positives for specific object types
     filters:
       []
@@ -183,7 +185,7 @@ frigate:
     # -- Optional: The threshold passed to cv2.threshold to determine if a pixel is different enough to be counted as motion.
     # - Increasing this value will make motion detection less sensitive and decreasing it will make motion detection more sensitive.
     # - The value should be between 1 and 255.
-    threshold: 25
+    threshold: null
     # -- Optional: Minimum size in pixels in the resized motion image that counts as motion
     # - Increasing this value will prevent smaller areas of motion from being detected. Decreasing will
     # - make motion detection more sensitive to smaller moving objects.
@@ -191,29 +193,29 @@ frigate:
     # - 15 - high sensitivity
     # - 30 - medium sensitivity
     # - 50 - low sensitivity
-    contour_area: 30
+    contour_area: null
     # -- Optional: Alpha value passed to cv2.accumulateWeighted when averaging the motion delta across multiple frames
     # - Higher values mean the current frame impacts the delta a lot, and a single raindrop may register as motion.
     # - Too low and a fast moving person wont be detected as motion.
-    delta_alpha: "0.2"
+    delta_alpha: ""
     # -- Optional: Alpha value passed to cv2.accumulateWeighted when averaging frames to determine the background
     # - Higher values mean the current frame impacts the average a lot, and a new object will be averaged into the background faster.
     # - Low values will cause things like moving shadows to be detected as motion for longer.
     # - https://www.geeksforgeeks.org/background-subtraction-in-an-image-using-concept-of-running-average/
-    frame_alpha: "0.2"
+    frame_alpha: ""
     # -- Optional: Height of the resized motion frame  (default: 50)
     # - This operates as an efficient blur alternative. Higher values will result in more granular motion detection at the expense
     # - of higher CPU usage. Lower values result in less CPU, but small changes may not register as motion.
-    frame_height: 50
+    frame_height: null
     # -- Optional: motion mask
     # - NOTE: see docs for more detailed info on creating masks
-    mask: 0,900,1080,900,1080,1920,0,1920
+    mask: ""
     # -- Optional: improve contrast
     # - Enables dynamic contrast improvement. This should help improve night detections at the cost of making motion detection more sensitive
     # - for daytime.
     improve_contrast: false
     # -- Optional: Delay when updating camera motion through MQTT from ON -> OFF
-    mqtt_off_delay: 30
+    mqtt_off_delay: null
 
   record:
     # -- Enable it to add the configuration in the config file
@@ -228,7 +230,7 @@ frigate:
     enabled: false
     # -- Optional: Number of minutes to wait between cleanup runs
     # - This can be used to reduce the frequency of deleting recording segments from disk if you want to minimize i/o
-    expire_interval: 60
+    expire_interval:
     # -- Optional: Retention settings for recording
     retain:
       # -- Render retain config
@@ -236,19 +238,21 @@ frigate:
       # -- Optional: Number of days to retain recordings regardless of events
       # - NOTE: This should be set to 0 and retention should be defined in events section below
       # - if you only want to retain recordings of events.
-      days: 0
+      days:
       # -- Optional: Mode for retention. Available options are: all, motion, and active_objects
       # - all - save all recording segments regardless of activity
       # - motion - save all recordings segments with any detected motion
       # - active_objects - save all recording segments with active/moving objects
       # - NOTE: this mode only applies when the days setting above is greater than 0
-      mode: all
+      mode: ""
     # -- Optional: Event recording settings
     events:
+      # -- Enable it to add the configuration in the config file
+      render_config: false
       # -- Optional: Number of seconds before the event to include
-      pre_capture: 5
+      pre_capture: null
       # -- Optional: Number of seconds after the event to include
-      post_capture: 5
+      post_capture: null
       # -- Optional: Objects to save recordings for. Defaults to all
       objects:
         []
@@ -265,11 +269,12 @@ frigate:
         # - all - save all recording segments for events regardless of activity
         # - motion - save all recordings segments for events with any detected motion
         # - active_objects - save all recording segments for event with active/moving objects
-        mode: motion
+        mode: ""
         # -- Optional: Per object retention days
         objects:
-          - object: person
-            days: 15
+          []
+          # - object: person
+          #   days: 15
 
   snapshots:
     # -- Enable it to add the configuration in the config file
@@ -297,8 +302,9 @@ frigate:
       default: 10
       # -- Optional: Per object retention days
       objects:
-        - object: person
-          days: 15
+        []
+        # - object: person
+        #   days: 15
 
   rtmp:
     # -- Enable it to add the configuration in the config file
@@ -312,34 +318,36 @@ frigate:
     # -- Optional: Set the height of the live stream. (default: 720)
     # - This must be less than or equal to the height of the detect stream. Lower resolutions
     # - reduce bandwidth required for viewing the live stream. Width is computed to match known aspect ratio.
-    height: 720
+    height: null
     # -- Optional: Set the encode quality of the live stream (default: shown below)
     # - 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
-    quality: 8
+    quality: null
 
   timestamp_style:
     # -- Enable it to add the configuration in the config file
     render_config: false
     # -- Optional: Position of the timestamp
     # - "tl" (top left), "tr" (top right), "bl" (bottom left), "br" (bottom right)
-    position: "tl"
+    position: ""
     # -- Optional: Format specifier conform to the Python package "datetime"
     # - Additional Examples:
     # - german: "%d.%m.%Y %H:%M:%S"
-    format: "%m/%d/%Y %H:%M:%S"
+    format: ""
     # -- Optional: Color of font
     color:
+      # -- Enable it to add the configuration in the config file
+      render_config: false
       # -- All Required when color is specified (default: shown below)
       red: 255
       green: 255
       blue: 255
     # -- Optional: Line thickness of font (default: shown below)
-    thickness: 2
+    thickness: null
     # -- Optional: Effect of lettering (default: shown below)
     # - None (No effect),
     # - "solid" (solid background in inverse color of font)
     # - "shadow" (shadow for font)
-    effect: None
+    effect: ""
 
   cameras:
     # -- Required: name of the camera
@@ -357,19 +365,27 @@ frigate:
               - detect
               - rtmp
             # -- Optional: stream specific global args
-            global_args:
+            global_args: ""
             # - Optional: stream specific hwaccel args
-            hwaccel_args:
+            hwaccel_args: ""
             # - Optional: stream specific input args
-            input_args:
+            input_args: ""
+            # - Optional: stream specific output args
+            output_args:
+              detect: ""
+              record: ""
+              rtmp: ""
         # -- Optional: camera specific global args
-        global_args:
+        global_args: ""
         # -- Optional: camera specific hwaccel args
-        hwaccel_args:
+        hwaccel_args: ""
         # -- Optional: camera specific input args
-        input_args:
+        input_args: ""
         # -- Optional: camera specific output args
         output_args:
+          detect: ""
+          record: ""
+          rtmp: ""
       # -- Optional: timeout for highest scoring image before allowing it
       # - to be replaced by a newer image.
       best_image_timeout: 60
@@ -383,14 +399,16 @@ frigate:
           coordinates: 545,1077,747,939,788,805
           # -- Optional: List of objects that can trigger this zone (default: all tracked objects)
           objects:
-            - person
+            []
+            # - person
           # -- Optional: Zone level object filters.
           # -NOTE: The global and camera filters are applied upstream.
           filters:
-            - object: person
-              min_area: 5000
-              max_area: 100000
-              threshold: "0.7"
+            []
+            # - object: person
+            #   min_area: null
+            #   max_area: null
+            #   threshold: ""
       # -- Optional: Configuration for the jpg snapshots published via MQTT
       mqtt:
         # -- Enable it to add the configuration in the config file
@@ -406,9 +424,9 @@ frigate:
         # -- Optional: crop the snapshot
         crop: true
         # -- Optional: height to resize the snapshot to
-        height: 270
+        height: null
         # -- Optional: jpeg encode quality
-        quality: 70
+        quality: null
         # -- Optional: Restrict mqtt messages to objects that entered any of the listed zones
         required_zones: []
       # -- Optional: Configuration for how camera is handled in the GUI.
@@ -417,7 +435,7 @@ frigate:
         render_config: false
         # -- Optional: Adjust sort order of cameras in the UI. Larger numbers come later
         # - By default the cameras are sorted alphabetically.
-        order: 0
+        order: null
         # -- Optional: Whether or not to show the camera in the Frigate UI
         dashboard: true
 
