--- a/charts/stable/cops/values.yaml
+++ b/charts/stable/cops/values.yaml
@@ -1,29 +1,31 @@
-env:
-  UMASK: ""
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/cops
   tag: latest@sha256:f356015ceef5155bdab78191c803f03affc80392dd9e24c795395dd4543b947c
-persistence:
-  config:
-    enabled: true
-    mountPath: /config
-  pathbooks:
-    enabled: true
-    mountPath: /books
+
 podSecurityContext:
   runAsGroup: 0
   runAsUser: 0
+
 securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
+
 service:
   main:
     ports:
       main:
-        port: 80
-        protocol: TCP
+        port: 10609
+        protocol: HTTP
         targetPort: 80
+
+persistence:
+  config:
+    enabled: true
+    mountPath: /config
+  books:
+    enabled: true
+    mountPath: /books
 
 portal:
   enabled: true
